RESOLVED FIXED161761
Long tap menu on an image link no longer includes "Save Image" button
https://bugs.webkit.org/show_bug.cgi?id=161761
Summary Long tap menu on an image link no longer includes "Save Image" button
Megan Gardner
Reported 2016-09-08 14:08:49 PDT
Long tap menu on an image link no longer includes "Save Image" button
Attachments
Patch (2.66 KB, patch)
2016-09-08 14:21 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2016-09-08 14:21:15 PDT
Tim Horton
Comment 2 2016-09-09 12:36:34 PDT
Comment on attachment 288320 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=288320&action=review > Source/WebKit2/ChangeLog:3 > + Long tap menu on an image link no longer includes "Save Image" button Is it possible to write a test for this? > Source/WebKit2/ChangeLog:14 > + Gather information for images as well as links, and they can be both "and they can be both"?
Simon Fraser (smfr)
Comment 3 2016-09-09 13:04:07 PDT
Comment on attachment 288320 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=288320&action=review >> Source/WebKit2/ChangeLog:3 >> + Long tap menu on an image link no longer includes "Save Image" button > > Is it possible to write a test for this? Probably not but we should make a way to do so.
Beth Dakin
Comment 4 2016-09-14 10:27:11 PDT
Comment on attachment 288320 [details] Patch Megan is working on a follow-up patch to add test infrastructure and tests.
WebKit Commit Bot
Comment 5 2016-09-14 10:46:38 PDT
Comment on attachment 288320 [details] Patch Clearing flags on attachment: 288320 Committed r205915: <http://trac.webkit.org/changeset/205915>
WebKit Commit Bot
Comment 6 2016-09-14 10:46:42 PDT
All reviewed patches have been landed. Closing bug.
jessRD
Comment 7 2016-10-12 04:45:23 PDT
Megan did awesome job here with the patch. As a follow-up at http://pimion.com I've saved a backup copy.
Note You need to log in before you can comment on or make changes to this bug.