Long tap menu on an image link no longer includes "Save Image" button https://bugs.webkit.org/show_bug.cgi?id=161761 <rdar://27202717>

Patch by Megan Gardner <megan_gardner@apple.com> on 2016-09-14
Reviewed by Beth Dakin.

* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant defaultActionsForImageSheet:]):
Added share to image sheet as to not regress current functionality
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):
Gather information for images as well as links, and they can be both

Canonical link: https://commits.webkit.org/180107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205915 268f45cc-cd09-0410-ab3c-d52691b4dbfc